--- a/index.html
+++ b/index.html
@@ -39,4 +39,5 @@
             <h1 class="btn btn-danger" id="song_name">SONG NAME - </h1>
         </center>
     </body>
+    <script src="main.js"></script>
 </html>
